Fixed scaling issues for image on mobile devices. Originally the images were showing as uneven lengths according to the lenght of the actual image and not the div that it was conatined in. Fixed this by giving the div a hardcoded height value versus a variable percent value

--- a/src/components/HomePage/MostSearched/MostSearched.css
+++ b/src/components/HomePage/MostSearched/MostSearched.css
@@ -1,21 +1,21 @@
 div.most-searched {
   background-color: #E3E1DC;
   height: auto;
-  max-width: calc(90% - 2rem);
+  max-width: 84%;
   border-radius: 0 0 40px 40px;
-  padding: 1rem 1rem 4rem;
+  padding: 1rem 1rem 1rem;
 }
 
 div.most-searched h5 {
-  margin: 0;
-  padding: .3rem 1rem;
+  margin: 0 0.5rem;
+  padding: .3rem 0;
   font-weight: 500;
 }
 
 div.most-searched div.line-break {
   height: .15rem;
   width: 3rem;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   background-color: #4D270C;
   border: 1px solid #4D270C; 
   border-radius: 40px;
@@ -25,25 +25,28 @@ div.most-searched div.titles {
   display: flex;
   justify-content: space-between;
   height: auto;
-  width: 90%;
-  margin: 0 1rem 3rem;
-  padding: 0 1rem;
+  width: 100%;
+  margin: 2rem 0.5rem 1rem;
+  padding: 0;
 }
 
 div.most-searched div.titles h3 {
  display: inline;
- font-size: 2rem;
- width: 36%;
+ font-size: .8rem;
+ flex-basis: 50%;
 }
 
 div.most-searched div.titles a {
   display: inline;
   font-size: .7rem;
   font-weight: 500;
-  align-self: center;
-  width: 15%;
+  flex-basis: 45%;
   text-decoration: none;
   color: #4D270C;
+  align-self: flex-end;
+  justify-self: flex-end;
+  text-align: right;
+  margin: 0 0.5rem 0 0;
 }
 
 div.most-searched div.titles p img {
@@ -55,15 +58,28 @@ div.most-searched div.article-images {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-content: space-between;
-  height: 70%;
+  height: auto;
 }
 
 div.most-searched div.article-images div {
-  flex-basis: 35%;
+  width: 45%;
+  height: 12rem;
   display: flex;
   flex-wrap:wrap;
-  align-content: center;
+  align-content: flex-start;
+  justify-content: flex-start;
   position: relative;
+}
+
+div.most-searched div.article-images div a {
+  width: 100%;
+  height: 50%;
+}
+
+div.most-searched div.article-images div a img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 div.most-searched div.article-images p {
@@ -99,19 +115,21 @@ div.most-searched div.article-images div img:hover {
 div.most-searched div.article-images div img.image-1 {
   border: 1px solid red;
   height: 10%;
+  z-index: 2;
+  position: relative;
 }
 
 /* Add a yellow backdrop on first image */
-div.most-searched div.article-images div.image-1:before {
+div.most-searched div.article-images div.image-1::after {
   content: "";
   background-color: #DEC68B;
   position: absolute;
-  height: 20%;
+  height: 30%;
   border-radius: 12px;
   width: 5%;
-  left: 3%;
-  z-index: 1;
+  left: -3%;
   top: 2%;
+  z-index: 0;
 }
 
 @media screen and (min-width: 700px) {
